<resources>
    <string name="app_name">Event Planner</string>

    <string name="role_od">Event organizer</string>
    <string name="role_pup">Service/Products provider</string>
    <string name="role_ak">Basic user</string>

    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_upload_profile_picture">Upload Profile Picture</string>
    <string name="button_upload_company_photos">Upload Company Photos</string>
    <string name="button_logout">Logout</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_company_address">Company Address</string>
    <string name="hint_company_phone">Company Phone</string>
    <string name="hint_company_description">Company Description</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_events">My Events</string>
    <string name="menu_services">My Services</string>
    <string name="menu_login">Login</string>
    <string name="menu_registration">Registration</string>

    <string name="user_role">User Role</string>
    <string name="role_label">Role:</string>

    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_passwords_not_match">Passwords do not match</string>
    <string name="error_empty_field">Field cannot be empty</string>
    <string name="registration_successful">Registration successful</string>
    <string name="login_successful">Login successful</string>
    <string name="logout_successful">You have logged out</string>

    <string name="top_5_events">Top 5 Events</string>
    <string name="all_events">All Events</string>
    <string name="search_events">Search Events</string>
    <string name="top_5_services">Top 5 Services/Products</string>
    <string name="all_services">All Services/Products</string>
    <string name="search_services">Search Services/Products</string>
    <string name="chat">Chat</string>

    <string name="button_load_more">Load more...</string>
    <string name="select_category">Select Category</string>
    <string name="hint_country">Country</string>
    <string name="hint_city">City</string>
    <string name="hint_street">Street</string>
    <string name="hint_zip_code">Zip code</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="button_upload_avatar">Upload profile avatar</string>
    <string name="button_upload_images">Upload images</string>
    <string name="home_screen">Home Screen</string>

</resources>